# ace-tool-windows

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ace-tool-windows-0.1.0.tgz  package.json
.codex-plugin/: plugin.json
.codex/plans/current/: 2026-03-05_redesign-codex-enhance-provider.md
.codex/skills/check-release/: SKILL.md
.codex/skills/check-release/scripts/: check_release.ps1
Flow/: FLOW.md  TreeMap.md
Flow/exports/: treemap.mermaid.md
Flow/modules/: codex-provider.md  enhance-entry.md  prompt-session-ui.md  startup-and-config.md
scripts/: ace-enhance.ps1  ace-search.ps1  build-bin.ps1
skills/ace-enhance/: SKILL.md
skills/ace-search/: SKILL.md
src/: config.rs  lib.rs  logging.rs  main.rs
src/enhancer/: codex_provider.rs  enhancer.rs  mod.rs  provider.rs
src/index/: local_search.rs  manager.rs  mod.rs
src/mcp/: mod.rs  schemas.rs
src/ui/: mod.rs  session.rs  window.rs
src/utils/: encoding.rs  ignore.rs  mod.rs  project_paths.rs
tests/: smoke.rs
