[package]
name = "rust-win32"
version = "0.3.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
futures = "0.3"
sha2 = "0.10"
walkdir = "2.5"
encoding_rs = "0.8"
ignore = "0.4"
chrono = { version = "0.4", features = ["clock"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Controls", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse"] }
